# fake-news-detector

./: README.md  docker-compose.yml  pyproject.toml
