[tool.poetry]
name = "fake-news-detector"
version = "0.1.0"
description = ""
authors = ["Juan Galeote <139239330+JuanGaleoteCDSP@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
